# binarypp

./: .coverage  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  code.unbin  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---wiki-request.md  --feature-request.md
binarypp/: __init__.py  __main__.py  cli.py  logging.py  memory.py  opcodes.py  parser.py  stack.py  types.py  utils.py  vm.py
binarypp/vm/: __init__.py  memory.py  opcodes.py  opmap.py  stack.py  vm.py
examples/: array.raw  cat.raw  fibonacci.raw  for_loop.raw  functions.raw  hello_file.raw  hello_stdout.raw  hello_world.raw  math.raw  odd_or_even.raw  rule110.raw  sierpinski.raw
scripts/: format.sh  install.sh  lint.sh  test.sh
tests/: test_memory.py  test_parser.py  test_stack.py  test_types.py  test_utils.py  test_vm.py
