[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "binarypp"
author = "Joey Lent (Supercolbat)"
author-email = "supercolbat@gmail.com"
home-page = "https://github.com/Supercolbat/binarypp"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
]
requires = []

[tool.flit.metadata.requires-extra]
test = [
    "pytest==7.0.1",
    "pytest-cov==3.0.0",
    "mypy==0.931",
    "flake8==4.0.1",
    "autoflake==1.4",
    "black==22.1.0",
    "isort==5.10.1",
]

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
# implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "binarypp.tests.*"
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
